fix title wrapping css

--- a/public/stylesheets/asana-personal.css
+++ b/public/stylesheets/asana-personal.css
@@ -104,4 +104,5 @@ input, textarea, .uneditable-input {
 
 h1.input {
    margin-top: 40px;
+   line-height: 40px;
 }
